2004-11-19  Bruno Haible  <bruno@clisp.org>

	* clos.tst: Test the forward-referenced-class behaviour with both
	settings of *forward-referenced-class-misdesign*.
	* mop.tst: Likewise.

2004-11-23  Sam Steingold  <sds@gnu.org>

	* macro8.tst: test COMPILE+LOAD-TIME-VALUE inside COMPILE-FILE

2004-11-17  Bruno Haible  <bruno@clisp.org>

	* clos.tst: Add some tests for symbols naming forward-referenced
	classes.
	* mop.tst: Add some tests for forward-referenced classes.

2004-11-22  Sam Steingold  <sds@gnu.org>

	* setf.tst (foo22): quote (values)

2004-11-22  Bruno Haible  <bruno@clisp.org>

	* setf.tst: Don't use the symbol 'foo' in too many contexts.

2004-11-21  Sam Steingold  <sds@gnu.org>

	* setf.tst: check that long DEFSETF permit missing store variables

2004-11-13  Bruno Haible  <bruno@clisp.org>

	* mop.tst: Test for the generic-function-class' default-initargs use in
	defgeneric.

2004-11-13  Bruno Haible  <bruno@clisp.org>

	* mop.tst: Test for the metaclass' default-initargs use in defclass.

2004-11-08  Bruno Haible  <bruno@clisp.org>

	* mop.tst: Remove special caution in initialize-instance method for
	virtual-generic-function.

2004-11-17  Bruno Haible  <bruno@clisp.org>

	* mop.tst: Add clos: package prefixes.

2004-11-09  Bruno Haible  <bruno@clisp.org>

	* clos.tst: Add more tests for notification of generic functions from
	defclass.

2004-11-15  Bruno Haible  <bruno@clisp.org>

	* mop-aux.lisp: New file.
	* mop.tst: Load it. Rely on it to define
	clos::compute-effective-method-as-function.

2004-11-07  Bruno Haible  <bruno@clisp.org>

	* clos.tst: Add tests for notification of generic functions from
	defclass.

2004-11-07  Bruno Haible  <bruno@clisp.org>

	* clos.tst: Add a test for notification of generic functions from
	change-class.

2004-11-07  Bruno Haible  <bruno@clisp.org>

	* mop.tst: Add test for notification upon change-class of a
	generic-function.

2004-11-07  Bruno Haible  <bruno@clisp.org>
